<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_page_bg_img"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"  >

    <LinearLayout style="@style/actionBar" >

        <ImageButton
            android:id="@id/actionbar_pre_btn"
            style="@style/actionBarPreButton" />

        <ImageView style="@style/actionBarSpliter" />

        <TextView
            android:id="@id/actionbar_page_title"
            style="@style/actionBarPageTitle"
            android:layout_marginRight="@dimen/actionbar_imgbtn_width_x1"
            android:text="@string/member_pwd_title" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="15dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/member_pwd_edit_change_old"
                style="@style/customEditText"
                android:drawableLeft="@drawable/login_edittext_pwd_ico"
                android:drawablePadding="10dp"
                android:hint="@string/changepwd_oldpwd_hint"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/member_pwd_change_edit_new"
                style="@style/customEditText"
                android:drawableLeft="@drawable/login_edittext_pwd_ico"
                android:drawablePadding="10dp"
                android:hint="@string/changepwd_newpwd_hint"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/member_pwd_change_edit_renew"
                style="@style/customEditText"
                android:drawableLeft="@drawable/login_edittext_pwd_ico"
                android:drawablePadding="10dp"
                android:hint="@string/changepwd_confinewpwd_hint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/member_pwd_change_btn_confim"
                style="@style/customBigButton"
                android:text="@string/changepwd_submit" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>